traefik/test-app/nginx-deploy-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app-gateway

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-gateway
  name: nginx-gateway
  namespace: nginx-app-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-gateway
  template:
    metadata:
      labels:
        app: nginx-gateway
    spec:
      containers:
      - image: nginx:latest
        name: nginx-gateway
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-gateway
  name: nginx-gateway
  namespace: nginx-app-gateway
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-gateway

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-gateway
  namespace: nginx-app-gateway
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik-gateway
    sectionName: websecure
  hostnames:
    - "nginx-gateway.vmstar.lan"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-gateway
      port: 80
